<resources>
    <string name="app_name">FonGuard</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_header_title">FonGuard</string>
    <string name="drawer_header_image_description">FonGuard Logo</string>

    <string name="drawer_item_triggers_motion">Motion</string>
    <string name="drawer_item_triggers_noise">Noise</string>
    <string name="drawer_item_triggers_vibration">Vibration</string>
    <string name="drawer_item_triggers_other">Other</string>

    <string name="drawer_group_triggers">Triggers</string>
    <string name="drawer_group_actions_rules">Actions &amp; Rules</string>
    <string name="drawer_group_settings">Settings</string>

    <string name="drawer_item_rules">Rules</string>
    <string name="drawer_item_settings_importExport">Import/Export</string>
    <string name="drawer_item_actions">Actions</string>

    <string name="fragment_label_home">FonGuard</string>

    <string name="fragment_label_triggers_motion">Triggers - Motion</string>
    <string name="fragment_label_triggers_noise">Triggers - Noise</string>
    <string name="fragment_label_triggers_vibration">Triggers - Vibration</string>
    <string name="fragment_label_triggers_other">Triggers - Other</string>

    <string name="fragment_label_actions">Actions</string>
    <string name="fragment_label_rules">Rules</string>
    <string name="fragment_label_settings_importExport">Settings - Import/Export</string>

    <string name="guardservice_foreground_notification_title">Guard Service</string>
    <string name="guardservice_foreground_notification_text">Guard Service is running</string>
    <string name="guardservice_foreground_notification_channel_name">Guard Service Notification Channel</string>

    <string name="fragment_triggers_motion_camera_name">Camera %1$s</string>
    <string name="fragment_triggers_motion_camera_front">front</string>
    <string name="fragment_triggers_motion_camera_back">back</string>
    <string name="fragment_triggers_motion_pixel_value_diff_threshold">Pixel value diff threshold (1–255)</string>
    <string name="fragment_triggers_motion_pixel_diff_number_threshold">Pixel number diff threshold (1–100,000)</string>
    <string name="fragment_triggers_motion_status">%1$d different pixels (%2$s)</string>
    <string name="fragment_triggers_motion_status_motion">motion</string>
    <string name="fragment_triggers_motion_status_no_motion">no motion</string>

    <string name="fragment_settings_import_button_text">Import</string>
    <string name="fragment_settings_import_dialog_title">Settings Import - Select a file</string>
    <string name="fragment_settings_import_error_title">Settings Import - Error</string>
    <string name="fragment_settings_import_error_message_json">Your settings file is not a valid JSON file. Please fix it and import it again.</string>
    <string name="fragment_settings_import_error_message_unknown">An unexpected error occurred while importing the settings. Please verify the correctness of your settings file and try again. Report an issue if the problem persists.</string>
    <string name="fragment_settings_import_error_positive_button_text">OK</string>
    <string name="fragment_settings_import_success_toast_text">Import successful!</string>

    <string name="fragment_settings_export_button_text">Export</string>
    <string name="fragment_settings_export_dialog_title">Settings Export - Save file</string>
    <string name="fragment_settings_export_error_title">Settings Export - Error</string>
    <string name="fragment_settings_export_error_message_unknown">An unexpected error occurred while exporting the settings. Please try again. Report an issue if the problem persists.</string>
    <string name="fragment_settings_export_error_positive_button_text">OK</string>
    <string name="fragment_settings_export_success_toast_text">Export successful!</string>

    <string name="main_activity_fatal_error_dialog_title">Fatal Error</string>
    <string name="main_activity_fatal_error_dialog_message">The application encountered an unexpected error and has to close. Please try again. Report an issue if the problem persists. Error description: %1$s</string>
    <string name="main_activity_fatal_error_dialog_button_text">OK</string>

    <string name="main_activity_permissions_denied_dialog_message">Be aware that without all the permissions requested by the app, some features will NOT work.\n\nDo you want to check the permissions again?</string>
    <string name="main_activity_permissions_denied_dialog_title">Permissions</string>
    <string name="main_activity_permissions_denied_dialog_button_negative_text">No</string>
    <string name="main_activity_permissions_denied_dialog_button_positive_text">Yes</string>
    <string name="coming_soon">This feature is coming soon!</string>
</resources>
